--- a/DecoratorWrong2/DecoratorWrong2.csproj
+++ b/DecoratorWrong2/DecoratorWrong2.csproj
@@ -8,9 +8,11 @@
   <ItemGroup>
     <None Remove="Common\" />
     <None Remove="Birthday\" />
+    <None Remove="Docs\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\" />
     <Folder Include="Birthday\" />
+    <Folder Include="Docs\" />
   </ItemGroup>
 </Project>
